# PyTEA-O

./: .gitignore  LICENSE  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt  run_TEA.py
DB_files/: BLOSUM62.txt  VHSE.txt  ZscaleSandberg.txt  aatypes.txt
config/: graph_results.cfg
example/: example.fasta  example_MSA.clustal  run_example.sh  ubiquitin.fasta.aligned  ubiquitin.headers
notebooks/: Analyse_results_Ye.ipynb  calculate-Zscale-newoutput.ipynb  calculate-Zscale.ipynb  test-analysis-lineage-based.ipynb  test-clustal.ipynb
src/: 1a_subgroups_lineage.py  1b_subgroups_manual.py  1b_subgroups_protein-based.py  TEA_analysis.py  TEA_subgroups.py  convert_alignment.py  graph_results.py  group_by_taxon.py  input_utils.py  make_aln_oneliner.pl  obtain_lineage.py  phylogeneticTree.py  protein_descriptors.py  run_TEA.py  shannon_entropy.py  upgma_subfam_grouping.py  utils.py  z_scales.py
src/PyTEAO/: __init__.py  main.py
src/PyTEAO/analysis/: __init__.py  twoentropyanalysis.py
src/PyTEAO/package_data/validation_data/: Ye-et-al_2008_alignment.fasta
src/PyTEAO/trees/: __init__.py  phylotree.py  taxontree.py  treebase.py  usertree.py
src/PyTEAO/utils/: __init__.py  general.py  msa.py  sequence.py  validation.py  visualization.py
src/PyTEAO/visualization/: __init__.py  plotmanager.py  subplotbase.py
src/PyTEAO/visualization/subplots/: descriptor.py  resdiuedistribution.py  residuepresense.py  shannonentropy.py  specificity.py  uniqueresidues.py
src/analysis/: phylotree.py  protein_descriptors.py  shannon_entropy.py  tea.py  two_entropy.py  twoentropyanalysis.py  upgma.py
src/grouping/: TEA_subgroups.py  group_by_taxon.py  upgma_subfam_grouping.py
src/io/: input.py  output.py
src/trees/: phylotree.py  taxontree.py  treebase.py
src/utils/: general.py  msa.py  multiprocess.py  sequence.py  visualization.py
src/visualization/: graph_results.py  plotmanager.py  subplotbase.py
src/visualization/subplots/: descriptor.py  resdiuedistribution.py  residuepresense.py  shannonentropy.py  specificity.py  uniqueresidues.py
test-analysis/: calculate-Zscale.ipynb  test-analysis-lineage-based.ipynb  test-analysis-protein-based.ipynb
tests/: test_msa.py
tests/data/: test.fasta.aligned
validation/: run_validation.py
