[project]
name = "PyTEAO"
version = "1.0.0"
description = "Two Entropy Analysis using Phylogenetic/Taxonomic Trees"
authors = [
	{ name = "Alexander Thomas Julian", email = "ajulian@hawk.illinoistech.edu" },
	{ name = "Rosan Kuin", email = "r.c.m.kuin@lacdr.leidenuniv.nl" },
	{ name = "Sunah Lee", email = "slee249@hawk.iit.edu" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
	"matplotlib==3.10.7",
	"numpy==2.3.5",
	"pandas==2.3.3",
	"pathos==0.3.4",
	"Requests==2.32.5",
	"tenacity==9.1.2"
]

[project.urls]
Homepage = "https://github.com/CDDLeiden/PyTEA-O"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"PyTEAO" = ["package_data/*"]

[project.scripts]
PyTEAO = "PyTEAO.main:main"